[gd_scene load_steps=4 format=3 uid="uid://dwrmp6y1d4uye"]

[ext_resource type="FontFile" uid="uid://b0rq2ti5fnhn" path="res://assets/Bonus/kenvector_future.ttf" id="1_gflsu"]
[ext_resource type="Script" path="res://ui.gd" id="1_rof07"]
[ext_resource type="Texture2D" uid="uid://dlko457mmgnnb" path="res://assets/PNG/UI/playerLife1_red.png" id="2_dtxdn"]

[node name="UI" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_rof07")

[node name="CounterMargin" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="KillCounter" type="Label" parent="CounterMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.57672, 0.715337, 1, 1)
theme_override_fonts/font = ExtResource("1_gflsu")
theme_override_font_sizes/font_size = 38
text = "Hello
"

[node name="LifesMargin" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 144.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="LifesOrg" type="HBoxContainer" parent="LifesMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="LifesMargin/LifesOrg"]
layout_mode = 2
texture = ExtResource("2_dtxdn")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="LifesMargin/LifesOrg"]
layout_mode = 2
texture = ExtResource("2_dtxdn")
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="LifesMargin/LifesOrg"]
layout_mode = 2
texture = ExtResource("2_dtxdn")
stretch_mode = 2

[node name="TextureRect4" type="TextureRect" parent="LifesMargin/LifesOrg"]
layout_mode = 2
texture = ExtResource("2_dtxdn")
stretch_mode = 2
